--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-with-pdf-challenge",
+  "name": "chat-with-pdf",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
+    "@langchain/community": "^0.3.24",
+    "@langchain/core": "^0.3.29",
+    "@langchain/openai": "^0.3.17",
+    "@langchain/pinecone": "^0.1.3",
+    "@pinecone-database/pinecone": "^4.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@react-pdf/renderer": "^4.1.6",
+    "@stripe/stripe-js": "^5.5.0",
+    "byte-size": "^9.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
+    "langchain": "^0.3.11",
+    "lucide-react": "^0.471.0",
+    "next": "15.1.3",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-dropzone": "^14.3.5",
+    "react-firebase-hooks": "^5.1.1",
+    "react-markdown": "^9.0.3",
+    "react-pdf": "^9.2.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@types/byte-size": "^8.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
