--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/pinecone": "^0.1.3",
     "@pinecone-database/pinecone": "^4.1.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@react-pdf/renderer": "^4.1.6",
     "@stripe/stripe-js": "^5.5.0",
     "byte-size": "^9.0.1",
@@ -33,6 +34,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-markdown": "^9.0.3",
     "react-pdf": "^9.2.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
