fixing secret manager

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "@google-cloud/secret-manager": "^5.6.0",
     "@langchain/community": "^0.3.24",
     "@langchain/core": "^0.3.29",
     "@langchain/openai": "^0.3.17",
